--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,13 @@
   --foreground: #171717;
 }
 
+@font-face {
+  font-family: 'TodaySB-Light';
+  src: url('/fonts/TodaySB-Light.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
